[gd_scene load_steps=10 format=3 uid="uid://cjm7625dcmyf8"]

[ext_resource type="Texture2D" uid="uid://bu7pl5mjckpl3" path="res://Sprites/Player/Gun/GunSprites/CarrotLauncher/CarrotLauncher.png" id="1_4dxja"]
[ext_resource type="Script" uid="uid://dxmcvyf1wnbqd" path="res://Scenes & Scripts/UI/GunUI/gun_ui.gd" id="1_5nxgm"]
[ext_resource type="Texture2D" uid="uid://ksqpo3f6uce1" path="res://Sprites/Player/Gun/GunSprites/CornLauncher/CornGun.png" id="3_4s6s5"]
[ext_resource type="FontFile" uid="uid://dn1oc8aj4aqfn" path="res://Assets/Fonts/Jersey15-Regular.ttf" id="3_eranh"]
[ext_resource type="Texture2D" uid="uid://b2hys0mh8e7pl" path="res://Sprites/Player/Gun/GunSprites/PotatoCannon/PotatoCannon.png" id="3_lsbcw"]
[ext_resource type="Texture2D" uid="uid://b58oso703xri8" path="res://Sprites/Farming/crops/crops - all.png" id="4_gnajk"]
[ext_resource type="Texture2D" uid="uid://c3x3phg4enk0o" path="res://Sprites/Player/Gun/GunSprites/WheatGun/WheatGun.png" id="4_jvcq0"]
[ext_resource type="Texture2D" uid="uid://dw547noex44r2" path="res://Sprites/Player/Gun/GunSprites/PumpkinGun/PumpkinGun.png" id="5_nxqrt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jvcq0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4dxja")
}],
"loop": true,
"name": &"carrot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4s6s5")
}],
"loop": true,
"name": &"corn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lsbcw")
}],
"loop": true,
"name": &"potato",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nxqrt")
}],
"loop": true,
"name": &"pumpkin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jvcq0")
}],
"loop": true,
"name": &"wheat",
"speed": 5.0
}]

[node name="GunUI" type="Control" groups=["gun_ui"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5nxgm")

[node name="GunIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(21, 164)
sprite_frames = SubResource("SpriteFrames_jvcq0")
animation = &"pumpkin"

[node name="ReserveAmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 147.0
offset_right = 19.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.34902, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_eranh")
theme_override_font_sizes/font_size = 8
text = "36"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CropIconTemplate" type="Sprite2D" parent="."]
visible = false
position = Vector2(41, 171)
texture = ExtResource("4_gnajk")
region_enabled = true
region_rect = Rect2(113, 48, 15, 15)
